--- a/Uebungen/H1/03/pizza.html
+++ b/Uebungen/H1/03/pizza.html
@@ -4,16 +4,13 @@
         <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aufgaeb 3</title>
+    <title>Pizza</title>
     </head>
     <body>
-        <h1>Rezepte</h1>
+        <h1>Pizza</h1>
         <a href="index.html">Menü</a><br />
         <a href="pizza.html">Pizza</a><br />
         <a href="pasta.html">Pasta</a><br />
-
-        <h1>Rezepte extern</h1>
-        <a href="https://fooby.ch" target="_blank">Fooby</a><br />
         
     </body>
 </html>
