skizze gemacht, readme datei verändert

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </li>
         </ul>
         <li class="d-flex">
-          <a class="nav-link active" aria-current="page" href="formular.html">Registrieren</a>
+          <a class="nav-link active" aria-current="page" href="formular.html">Register</a>
         </li>
       </div>
     </div>
