--- a/LaVoitureNoire.html
+++ b/LaVoitureNoire.html
@@ -25,7 +25,7 @@
                     </li>
                 </ul>
                 <li class="d-flex">
-                    <a class="nav-link active" aria-current="page" href="formular.html">Registrieren</a>
+                    <a class="nav-link active" aria-current="page" href="formular.html">Register</a>
                 </li>
             </div>
         </div>
@@ -35,9 +35,9 @@
     <img class="voiture" src="LaVoitureNoireBild.jpg">
 
     <div class="textVoiture">
-        <p>La Voiture Noire ist ein Einzelstück des zum Volkswagen-Konzern gehörenden Herstellers Bugatti Automobiles,
-            das im März 2019 auf dem Genfer Auto-Salon als Konzeptfahrzeug vorgestellt wurde. Die Modellbezeichnung
-            bezieht sich auf einen verschollenen Vorkriegsklassiker von Bugatti.</p>
+        <p>La Voiture Noire is a one-off model from Bugatti Automobiles, a manufacturer belonging to the Volkswagen
+            Group, which was unveiled as a concept car at the Geneva Motor Show in March 2019. The model designation
+            refers to a lost pre-war Bugatti classic.</p>
     </div>
 </body>
 
