--- a/chiron.html
+++ b/chiron.html
@@ -25,7 +25,7 @@
                     </li>
                 </ul>
                 <li class="d-flex">
-                    <a class="nav-link active" aria-current="page" href="formular.html">Registrieren</a>
+                    <a class="nav-link active" aria-current="page" href="formular.html">Register</a>
                 </li>
             </div>
         </div>
@@ -37,10 +37,9 @@
 
 
     <div class="textChiron">
-        <p>Der Bugatti Chiron ist ein deutsch-französischer Supersportwagen des französischen
-            Automobilherstellers Bugatti Automobiles SAS, der in Wolfsburg von der Bugatti Engineering GmbH
-            entwickelt wurde und auf einen technischen Entwurf von Bugatti Chef-Ingenieur Frank Götzke
-            zurückgeht.</p>
+        <p>The Bugatti Chiron is a German-French super sports car from the French car manufacturer Bugatti Automobiles
+            SAS, developed in Wolfsburg by Bugatti Engineering GmbH and based on a technical design by Bugatti chief
+            engineer Frank Götzke.</p>
     </div>
 
 
